@@ -54,6 +54,27 @@ develop and support Conda users.
 [conda]: https://docs.conda.io/en/latest/
 [mambaforge]: https://mamba.readthedocs.io/en/latest/installation.html
 
+### Running Integration Tests
+
+Many of the test suites need to run against external services.  For example,
+the PostgreSQL driver needs to test against a running database!  This can be
+done by setting environment variables to tell tests where the services they
+need can be located.
+
+To standardize the configuration of these services, we use a Docker Compose
+file and a dotenv file.  Services can be started with Docker Compose:
+
+```shell
+$ docker compose up --detach --wait postgres-test
+```
+
+Then, source the .env file at the root of the repo to set the environment
+variables before running tests:
+
+```shell
+$ source .env
+```
+
 ### C/C++
 
 All libraries here contained within one CMake project. To build any
@@ -219,6 +240,35 @@ $ cd java/
 # Build and run tests
 $ mvn clean install
 ```
+
+CI also builds the project with [Checker Framework][checker-framework] and
+[ErrorProne][error-prone] enabled.  These projects require additional
+configuration.  First, create a file `java/.mvn/jvm.config` containing this:
+
+```
+--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+--add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+--add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+```
+
+This is required so that the above static analysis tools can continue to
+access necessary Java compiler internals to do their job.
+
+Then, build with the `errorprone` Maven profile enabled:
+
+```
+mvn install -Perrorprone
+```
+
+[checker-framework]: https://checkerframework.org/
+[errorprone]: https://errorprone.info/
 
 ### Python
 
